[package]
name = "api-proxy"
version = "1.0.0"
edition = "2021"
authors = ["Eri Meilis <eri@admice.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
console_error_panic_hook = { version = "0.1.7" }
seahash = "4.1"
